burger-menu overflow fix and add pop-up on header button

--- a/style.scss
+++ b/style.scss
@@ -89,6 +89,63 @@ svg {
     height: 24px;
 }
 
+.modal {
+    display: none;
+
+    &--active {
+        position: fixed;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100vw;
+        height: 100vh;
+        background: rgba($color: #000000, $alpha: 0.7);
+        z-index: 2;
+    }
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+        border-radius: 20px;
+        background-color: #161B18;
+        padding: 0 45px;
+    }
+
+    &__close {
+        display: flex;
+        flex-direction: row;
+        justify-content: end;
+        padding: 20px 0;
+
+        &-icon {
+            width: 24px;
+            height: 24px;
+            cursor: pointer;
+        }
+    }
+
+    &__title {
+        text-align: center;
+        font-weight: 500;
+        color: #fff;
+        font-size: 23px;
+        line-height: 28px;
+    }
+
+    &__actions {
+        margin: 50px 0 65px 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 32px;
+
+        &-action {
+            width: 360px;
+            height: 65px;
+        }
+    }
+}
+
 @media screen and (max-width: 1200px) {
     .wrapper {
         margin: 0 16px;
@@ -129,7 +186,7 @@ svg {
 
     .burger {
         display: block;
-
+        
         &__container {
             margin: 0 55px;
         }
@@ -144,6 +201,7 @@ svg {
             left: 0;
             right: 0;
             z-index: 99;
+            overflow: scroll;
 
 
             &-title {
